# Pointcept

./: .gitignore
configs/imotion/: semseg-pt-v3m1-0-base.py  semseg-spunet-v1m1-0-base.py
deploy/: pcd_reader.cpp
deploy-test/: CMakeLists.txt  visResult.py
pointcept/datasets/: __init__.py  imotion.py
pointcept/engines/: test.py
